# vc-gpt

./: .gitignore
backend/: main.py  pyproject.toml  streamlit.py  test.py
backend/app/: xml_agent.py
backend/app/agent/: __init__.py  agent.py  agent_tools.py  prompts.py  schema.py
backend/app/config/: settings.py
